[package]
name = "wgpu-04-buffer"
version = "0.1.0"
authors = ["Carlos Neto <https://github.com/carlosvneto>"]
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
# NEW!
bytemuck = { version = "1.14", features = [ "derive" ] }

[[bin]]
name = "wgpu-04-buffer"
path = "src/main.rs"

[[bin]]
name = "wgpu-04-buffer-challenge"
path = "src/challenge.rs"